# MetroTuner

./: .gitignore  .gitmodules  README.md
app/: build.gradle
app/jni/: .clang-format  .clang-tidy  CMakeLists.txt
app/jni/src/: CMakeLists.txt  app.cpp  app.h  audio.cpp  audio.h  main.cpp  microphone.cpp  microphone.h  microphone.hpp  notes.cpp  notes.h  pch.h  screen.cpp  screen.h  text.cpp  text.h  timer.cpp  timer.h
app/jni/src/utility/: fftwf-complex-signal.cpp  fftwf-complex-signal.h  float-to-uint8.h  pointer-view.h  vec.hpp
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
